# gomod-go-version-updater-action

./: .gitignore  README.md  action.yml  go.mod  main.py  pyproject.toml  requirements.txt  test.py
.github/: dependabot.yml
.github/workflows/: gomod-go-version-updater.yml  mcvs-pr-validation.yml  pull-requests-merger.yml  python.yml
